GNOME Bugzilla – Bug 736369
Smileys are not centered ("Insert Smiley" menu)
Last modified: 2014-09-12 07:41:41 UTC
Created attachment 285781 [details] Current "Insert Smiley" menu The image of the smiley inside the menu item is left-justified. (see attachment)
Created attachment 285782 [details] [review] Patch: Center smileys inside the menu item
Created attachment 285785 [details] After patch: "Insert Smiley" menu
Hi Kevin, thanks for your patch. Would it be possible to achieve the same result using Gtk's CSS engine instead? We are trying to move style related settings to empathy.css. Btw, our coding style are "MACRO (arg)" not "MACRO(arg)".
Created attachment 285953 [details] [review] Patch: Center smileys inside the menu item 02 Hi I think a pure CSS solution is not possible ... #GtkImage must be added manually to the #GtkMenuItem (a label can be added per default, but afaik a #GtkLabel cannot display images). ..., but to set a 'style name' for the GtkMenuItem. enclosed the patch with the modified code.
Thanks, I changed your patch to use CSS class instead (cleaner) and pushed it to master.