Center the 'smiley images' inside the menu items

Adds the #GtkImage widget to the menu item (act like #GtkBin) and sets the stylename 'empathy-smiley-menu-item'.

The style of the menu item can be changed with CSS (empathy.css > .empathy-smiley-menu-item).

https://bugzilla.gnome.org/show_bug.cgi?id=736369